force-app/main/default/objects/Job__c/fields/Validity_Period_Days__c.field-meta.xml
<CustomField>
    <fullName>Validity_Period_Days__c</fullName>
    <label>Validity Period(Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>