force-app/main/default/objects/Job__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Job_Type__c</columns>
    <columns>Job_Description__c</columns>
    <columns>Number_of_Vacc__c</columns>
    <columns>Experience__c</columns>
    <columns>Validity__c</columns>
    <columns>Validity_Period_Days__c</columns>
    <columns>Expiry_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>